--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es2015"
-  }
+    "target": "es2015",
+    "outDir": "dist",
+    "declaration": true,
+  },
+  "files": [
+    "index.d.ts",
+    "index.ts"
+  ],
 }
