--- a/.github/workflows/update-docs.yml
+++ b/.github/workflows/update-docs.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Check for file changes
       id: file_changes
       run: |
-        if [[ $(git diff --name-only master^) =~ \.(js|ts)$ ]]; then
+        if [[ $(git diff --name-only master) =~ \.(js|ts)$ ]]; then
           echo "::set-output name=changes::true"
         else
           echo "::set-output name=changes::false"
